--- a/notebooks/kyd-ethnic-pop.ipynb
+++ b/notebooks/kyd-ethnic-pop.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a63d3128",
    "metadata": {
     "tags": []
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "0cf573e5",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "148c95ee",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "df1d0e34",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "e7acd19a",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "536b4da7",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "7308bcbb",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "a5cff7e9",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "85381abd",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "4d29eb48",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "1e930268",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "583d6004",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "9441ab36",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "65ed6b76",
    "metadata": {},
    "outputs": [],
@@ -210,13 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "89ce8bd9",
    "metadata": {},
    "outputs": [],
    "source": [
     "## combine them all using concat\n",
     "combined = pd.concat([melted_ancestry, melted_asian, melted_hispanic], ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "166e36ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## change ct dtype\n",
+    "combined['ct'] = combined['ct'].astype('object')"
    ]
   },
   {
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "33011d91",
    "metadata": {},
    "outputs": [],
@@ -240,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "6fd942b3",
    "metadata": {},
    "outputs": [],
@@ -260,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "808341a8",
    "metadata": {},
    "outputs": [],
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "05cadc22",
    "metadata": {},
    "outputs": [],
@@ -282,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "87160d25",
    "metadata": {},
    "outputs": [
@@ -310,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "7db7b6de",
    "metadata": {},
    "outputs": [
@@ -384,7 +395,7 @@
        "4  36005001901     Dominican       370.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "82b9539b",
    "metadata": {},
    "outputs": [],
@@ -415,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "id": "6bc45d3e",
    "metadata": {},
    "outputs": [],
@@ -428,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "id": "dd42ca81",
    "metadata": {},
    "outputs": [],
@@ -441,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "id": "c9694bd9",
    "metadata": {},
    "outputs": [],
@@ -452,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "id": "759578ac",
    "metadata": {},
    "outputs": [],
@@ -465,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "id": "baaa8ec2",
    "metadata": {},
    "outputs": [],
@@ -478,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "id": "2fcb8dd1",
    "metadata": {},
    "outputs": [],
@@ -488,9 +499,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f18c71a",
+   "metadata": {},
+   "source": [
+    "#### find top three-largest geometries by council district"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "af3ff415",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## remove any whitespace from the ct columns\n",
+    "## checking for and removing whitespace\n",
+    "combined['ct'] = combined['ct'].astype(str).str.strip().str.replace('\\xa0', '', regex=True)\n",
+    "crosswalk['ct'] = crosswalk['ct'].astype(str).str.strip().str.replace('\\xa0', '', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "4f2d9620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## merge the ethnicties data with the crosswalk so we get the CDs\n",
+    "top_three = combined.merge(crosswalk[['ct','cd']],\n",
+    "                           on = 'ct',\n",
+    "                           how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "9af8c0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## group ethnic populations by council district\n",
+    "grouped = top_three.groupby(['cd','ethnicity'])['population'].sum().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "c35673c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cd</th>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghan</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>African</td>\n",
+       "      <td>497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Albanian</td>\n",
+       "      <td>217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alsatian</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Arab Arab</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7594</th>\n",
+       "      <td>9</td>\n",
+       "      <td>W Indians Trinidadian and Tobagonian</td>\n",
+       "      <td>1198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7595</th>\n",
+       "      <td>9</td>\n",
+       "      <td>W Indians West Indian</td>\n",
+       "      <td>1447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7596</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Welsh</td>\n",
+       "      <td>348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7597</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Yugoslavian</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7598</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Zimbabwean</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7599 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     cd                             ethnicity  population\n",
+       "0     1                                Afghan          15\n",
+       "1     1                               African         497\n",
+       "2     1                              Albanian         217\n",
+       "3     1                              Alsatian           0\n",
+       "4     1                             Arab Arab          83\n",
+       "...  ..                                   ...         ...\n",
+       "7594  9  W Indians Trinidadian and Tobagonian        1198\n",
+       "7595  9                 W Indians West Indian        1447\n",
+       "7596  9                                 Welsh         348\n",
+       "7597  9                           Yugoslavian           0\n",
+       "7598  9                            Zimbabwean          12\n",
+       "\n",
+       "[7599 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## take a peak\n",
+    "grouped"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f18c71a",
+   "id": "57b4c0ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a44db30",
    "metadata": {},
    "outputs": [],
    "source": []
